# genro-asgi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
applications/genro_api/: __init__.py  config.yaml  main.py
applications/swagger/: __init__.py  config.yaml  main.py
design_documentation/: CLAUDE_REVISION_INSTRUCTIONS.md  DOCSTRING_AUDIT_REPORT.md  DOCSTRING_REMEDIATION_PLAN.md  index.rst
design_documentation/missing_doc/: 01_introduction.md  02_server_foundation.md  03_application_system.md  04_request_response.md  06_security_and_middleware.md  07_specialized_apps.md  10_spa_management.md  _STATUS.md  _meta.md  conflicts_by_topic.md
design_documentation/spec_details/: index.md
design_documentation/specifications/: FUNCTIONAL_TOC.md  OPERATIONAL_STATUS.md  index.rst
docs/: Makefile  conf.py  index.rst
docs/api/: applications.rst  dispatcher.rst  executors.rst  index.rst  lifespan.rst  middleware.rst  request.rst  response.rst  routers.rst  server.rst  wsx.rst
docs/architecture/: 00-overview.md  01-server.md  02-request-system.md  03-response-system.md  04-executors.md  05-lifespan.md  06-wsx-protocol.md  07-streaming.md  08-routing.md  09-auth-context.md
examples/base_example/: config.yaml  config_with_swagger.yaml  office.py  shop.py
examples/classic_asgi/: demo_server.py
examples/demo_shop/: MIGRATION_PLAN.md  README.md  __init__.py  config.yaml  main.py  responses.py
examples/docs_site/: config.yaml
examples/static_site/: config.yaml
future_ideas/: publisher.py
future_ideas/applications/: base.py
implementation-plan/: 00-overview.md  01-types.md  02-datastructures.md  03-exceptions.md  05-responses.md  06-websockets.md  07-lifespan.md  08-applications.md  08b-executor.md  08c-tasks.md  09-middleware.md  10-wsx-core.md  13-final-integration.md  README.md
implementation-plan/analysis/: 03-exceptions-analysis.md  05-response-analysis.md  divergenze.md
implementation-plan/archive/: 00-overview.md  04-requests.md  11-wsx-handler.md  12-wsx-subscriptions.md
specifications/: 01-overview.md  executors.md
specifications/architecture/: applications.md  wsx-protocol.md
specifications/dependencies/: genro-routes.md  genro-toolbox.md  genro-tytx.md
specifications/guides/: applications.md
specifications/interview/: 01-questions.md  02-knowledge-summary.md
specifications/legacy/: TODO-to-document.md  architecture.md  configuration.md  (+2 more)
temp/: asgi-publisher-memo.md  mount-design.md  server-design.md  smartpublisher-analysis.md
tests/: test_authentication.py  test_basic.py  test_datastructures.py  test_exceptions.py  test_executors.py  test_request.py  test_response.py  test_server_application.py  test_static_router.py  test_storage.py  test_types.py  test_wsx.py
(+231 files in other folders)
