[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genro-asgi"
version = "0.1.0"
description = "A minimal, stable ASGI foundation - framework-agnostic toolkit for building high-performance web services"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Softwell S.r.l.", email = "info@softwell.it"}
]
keywords = ["asgi", "web", "async", "http", "server", "framework-agnostic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "genro-toolbox>=0.2.0",
    "genro-routes>=0.1.0",
    "uvicorn>=0.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
json = [
    "orjson>=3.9.0",
]
tytx = [
    "genro-tytx>=0.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=4.0.0",
]
all = [
    "orjson>=3.9.0",
    "genro-tytx>=0.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=4.0.0",
]

[project.scripts]
genro-asgi = "genro_asgi.__main__:main"

[project.urls]
Homepage = "https://github.com/genropy/genro-asgi"
Documentation = "https://genro-asgi.readthedocs.io"
Repository = "https://github.com/genropy/genro-asgi"
"Bug Tracker" = "https://github.com/genropy/genro-asgi/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
norecursedirs = ["old_tests"]
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=genro_asgi --cov-report=term-missing --cov-report=html --cov-report=xml"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
